--- a/style.css
+++ b/style.css
@@ -450,7 +450,9 @@ a:link:active, a:visited:active {
 
 /* ——————————————————————————————————————— 
   CSS TYPOGRAPHY 
-——————————————————————————————————————————————————— Có thể sử dụng các font hệ thống, GG font, điều chỉnh kích thước kiểu dáng yêu thích    */
+——————————————————————————————————————————————————— */
+/* FONT - 
+Có thể sử dụng các font hệ thống, GG font, điều chỉnh kích thước kiểu dáng yêu thích    */
 .suse-font {
   font-family: "SUSE Mono", sans-serif;
   font-optical-sizing: auto;
@@ -490,6 +492,26 @@ font-family */
   width: 200px;
 }
 
+.ex-font {
+  font: italic bold large monospace, system-ui;
+}
+.ex-font-family {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.ex-font-size {
+  font-size: 13px;
+}
+.ex-font-style {
+  font-style: italic;
+}
+.ex-font-variant {
+  font-variant: small-caps;
+}
+.ex-font-weight {
+  font-weight: 800;
+}
+
 /* Property	Description
 font	        -Sets all the font properties in one declaration
 font-family	  -Specifies the font family for text
@@ -497,6 +519,226 @@ font-size	    -Specifies the font size of text
 font-style	  -Specifies the font style for text
 font-variant	-Specifies whether or not a text should be displayed in a small-caps font
 font-weight	  -Specifies the weight of a font */
+
+/* LINE HEIGHT & LETTER SPACING */
+/* Line height 
+  Defines the height of a single line of text */
+.demo-line-height {
+  line-height: normal;
+  background-color: #00bbff;
+}
+.demo-line-height2 {
+  font-size: medium;
+  line-height: 1.6;
+  background-color: #00bbff;
+}
+.demo-line-height3 {
+  line-height: 60px;
+  background-color: #00bbff;
+}
+.demo-line-height4 {
+  line-height: 0.5em;
+  background-color: #00bbff;
+}
+
+/* Letter spacing
+  Defines the spacing between the characters of a block of text.*/
+.letter-spacing {
+  letter-spacing: normal;
+  background-color: #34a123;
+}
+.letter-spacing2 {
+  letter-spacing: 5px;
+  background-color: #34a123;
+}
+.letter-spacing3 {
+  letter-spacing: 2em;
+  background-color: #34a123;
+}
+
+/*  TEXT  */
+/* Text-Align
+  Defines how the text content of the element is horizontally aligned   */
+table.demo-text-align td:first-child {
+  width: 200px;
+  background-color: #96c2ff;
+  border: 2px solid rgb(55, 55, 55);
+}
+table.demo-text-align td:last-child {
+  width: 400px;
+  background-color: #9af8a2;
+  border: 2px solid rgb(54, 54, 54);
+}
+
+.text-left td:last-child {
+  text-align: left;
+}
+.text-right td:last-child {
+  text-align: right;
+}
+.text-centered td:last-child {
+  text-align: center;
+}
+.text-justified td:last-child {
+  text-align: justify;
+}
+
+/* Text-Decoration
+  Defines how the text content of the element is decorated.      */
+
+.demo-text-decoration p:first-of-type {
+  text-decoration: none;
+}
+.demo-text-decoration p:nth-of-type(2) {
+  text-decoration: underline;
+}
+.demo-text-decoration p:nth-of-type(3) {
+  text-decoration: line-through;
+}
+.demo-text-decoration p:nth-of-type(4) {
+  text-decoration: overline;
+}
+
+/* Text-Indent
+  Defines the indentation of the element's first line of text.        */
+
+.demo-text-indent td:first-child {
+  width: 200px;
+  background-color: #96c2ff;
+  border: 2px solid rgb(55, 55, 55);
+}
+.demo-text-indent td:last-child {
+  width: 400px;
+  background-color: #9af8a2;
+  border: 2px solid rgb(54, 54, 54);
+}
+.not-indented-text {
+  text-indent: none;
+}
+.indented-text {
+  text-indent: 3em;
+}
+.negative-indented-text {
+  text-indent: -2em;
+}
+
+/* Text-Overflow
+  Defines how the hidden text content behaves if it's overflowing.  
+  Both of the following properties are required for text-overflow to take effect: 
+  white-space: nowrap;
+  overflow: hidden */
+
+.default-text-overflow {
+  width: 200px;
+  border: 1px solid #000000;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: none;
+}
+.clipped-text-overflow {
+  width: 200px;
+  border: 1px solid #000000;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* Text-Shadow
+  The CSS text-shadow property applies a shadow to text.
+  In its simplest use, you only specify the horizontal and the vertical shadow.
+  In addition, you can add a shadow color and blur effect.   */
+
+.text-shadow1 {
+  text-shadow: 2px 2px;
+}
+.text-shadow2 {
+  text-shadow: 2px 2px red;
+}
+.text-shadow3 {
+  text-shadow: 2px 2px 5px red;
+}
+.text-shadow4 {
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+/* Text-Transform
+  Defines how the text content should be transformed.*/
+
+.demo-text-transform p[class*="transform"] {
+  background-color: #dcbaff;
+  border: 2px dotted violet;
+}
+.removes-text-transform {
+  text-transform: none;
+}
+.capital-first-text-transform {
+  text-transform: capitalize;
+}
+.capital-all-text-transform {
+  text-transform: uppercase;
+}
+.lowercase-text-transform {
+  text-transform: lowercase;
+}
+
+/* Word-wrap & Word-break & Word-spacing */
+/* Allow long words to be able to be broken and wrap onto the next line:  */
+.no-word-wrap {
+  width: 170px;
+  border: 1px solid #000000;
+  padding: 8px;
+  word-wrap: normal;
+}
+.word-wrap {
+  width: 170px;
+  border: 1px solid #000000;
+  padding: 8px;
+  word-wrap: break-word;
+}
+
+/* The CSS word-break property specifies how words should break when reaching the end of a line.
+This property can take one of the following values:
+normal - This is default. Uses the default line breaking rules of the language
+break-all - Allows words to be broken at any character to prevent overflow
+keep-all - Prevents words from breaking */
+.word-break {
+  width: 170px;
+  border: 1px solid #000000;
+  padding: 8px;
+  word-break: normal;
+}
+.word-break2 {
+  width: 170px;
+  border: 1px solid #000000;
+  padding: 8px;
+  word-break: break-all;
+}
+
+/* The word-spacing defines the spacing between words of a block of text  
+You can use pixel, em values: this allows the spacing to remain relative to the font-size.*/
+
+.word-spacing {
+  word-spacing: 20px;
+}
+
+/* White-space 
+  Defines how the element's white  space is handled  */
+.white-space-nowrap {
+  white-space: nowrap;
+}
+.white-space-normal {
+  white-space: normal;
+}
+.white-space-pre {
+  white-space: pre;
+}
+.white-space-pre-wrap {
+  white-space: pre-wrap;
+}
+.white-space-pre-line {
+  white-space: pre-line;
+}
 
 /* ——————————————————————————————————————— 
   BOX MODEL 
